<resources>
    <string name="app_name">Угадай число</string>
    <string name="select_game_mode_text">Выберите режим игры</string>
    <string name="guess_my_number_text">Угадай мое число</string>
    <string name="guess_the_phone_number_text">Угадать число телефона</string>
    <string name="start_game_text">Все готово, начинаем!</string>
    
    <string name="game_preparation_text">Мы почти готовы</string>
    <string name="number_of_attempts_text">Количество попыток</string>
    <string name="min_count_text">Минимальное значение (от)</string>
    <string name="max_count_text">Максимальное значение (до)</string>
    <string name="start_text">Начинаем!</string>
    <string name="error_text">Ошибка! Не все поля заполнены!</string>
    <string name="num_error_text">Ошибка! Максимальное значение должно быть меньше минимального!</string>
    
    <string name="number_limit_text">Число загадано в пределах:</string>
    <string name="phone_number_text">Угадай мое число!</string>
    <string name="number_attempts_text">У вас осталось попыток: </string>
    <string name="enter_the_number_text">Введите число: </string>
    <string name="enter_button_text">Ответить!</string>

    <string name="my_number_text">Угадываем ваше число!</string>
    <string name="phone_attempts_text">У меня осталось попыток: </string>

    <string name="less_text">Меньше</string>
    <string name="big_text">Больше</string>
    <string name="equal_text">Верно!</string>

    <string name="end_guess1">Я устал! Ваше число </string>
    <string name="end_guess2"> или </string>
    <string name="end_guess_game">Победа! Возвращаемся назад...</string>

    <string name="num_error">Введите число!</string>

    <string name="num_is_big">Мое число больше!</string>
    <string name="num_is_small">Мое число меньше!</string>
    <string name="num_is_true">Вы угадали!</string>
</resources>